--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-awesome-reveal": "^4.2.10",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.75",
