--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "dev": "vite --mode production",
+    "build": "tsc && vite build --mode production",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -17,6 +17,7 @@
     "axios": "^1.6.8",
     "chart.js": "^4.4.3",
     "framer-motion": "^11.0.25",
+    "mime": "^4.0.3",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.10",
     "react-chartjs-2": "^5.2.0",
